Improving Stepper and Step components + adding Button to the app

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 #root {
   max-width: 1280px;
+  width: 80%;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
@@ -34,5 +35,11 @@
 }
 
 .card {
-  padding: 2em;
+  width: 100%;
+}
+
+.stepper-button-section {
+  display: grid;
+  grid-auto-flow: column;
+  grid-column-gap: 8px;
 }
